# passive-ds-control

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  dependencies.rosinstall  mainpage.dox  package.xml
doc/html/: annotated.html  cascade__ds__controller_8h_source.html  classCascadeDSController-members.html  classCascadeDSController.html  classDSController-members.html  classDSController.html  classDSController__inherit__graph.map  classDSController__inherit__graph.md5  classOpenloopDSController-members.html  classOpenloopDSController.html  classPassiveDSController-members.html  classPassiveDSController.html  classPassiveDSController__coll__graph.map  classPassiveDSController__coll__graph.md5  classSmoothRise2d-members.html  classSmoothRise2d.html  classSmoothRiseFall-members.html  classSmoothRiseFall.html  classSmoothRiseFall2d-members.html  classSmoothRiseFall2d.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherits.html  (+6 more)
doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  search.js
doc/latex/: annotated.tex  classCascadeDSController.tex  classDSController.tex  classDSController__inherit__graph.md5  classOpenloopDSController.tex  classPassiveDSController.tex  classPassiveDSController__coll__graph.md5  classSmoothRise2d.tex  classSmoothRiseFall.tex  classSmoothRiseFall2d.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  hierarchy.tex  index.tex  md_README.tex  refman.tex
include/: cascade_ds_controller.h  linear_velocity_fields.h  openloop_ds_controller.h  passive_ds_controller.h  passive_ds_typedefs.h  smooth_truncation.h
include/passive_ds_control/: CascadeDSController.hpp  DSController.hpp  OpenloopDSController.hpp  PassiveDSController.hpp  PassiveDSTypedefs.hpp  SmoothTruncation.hpp
src/: CascadeDSController.cpp  DSController.cpp  OpenloopDSController.cpp  PassiveDSController.cpp  cascade_ds_controller.cpp  cascade_main.cpp  main.cpp  openloop_ds_controller.cpp  openloop_test.cpp  passive_ds_controller.cpp
